# rag_app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.mcaps/: build_v2.py
.playwright-mcp/: page-2026-06-11T14-15-28-847Z.yml
.serena/: project.yml
alembic/: env.py
alembic/versions/: 0001_stage1_baseline.py  (+19 more)
deploy/: PUBLIC.md  RLS.md  build_web.sh  dots-mocr.service  mineru-vllm.service  paddle-genai.service  setup_babeldoc.sh  setup_hunyuan.sh  setup_hymt15.sh  setup_qwen35.sh  setup_rag_services.sh  setup_vllm_qwen32b.sh  vllm-bge-m3.service  vllm-embedding.service  vllm-hunyuan.service  vllm-hymt15.service  vllm-hymt2.service  vllm-qwen32b.service  vllm-qwen35.service  vllm-reranker.service  vllm-visual-embedding.service  vllm-visual-reranker.service
docs/: MEMORY_rev4_mem0_articles.md  roadmap.md  Соответствие_ТЗ_и_реализации.md
extension/: package.json  pnpm-lock.yaml  wxt.config.ts
scripts/: _acceptance_s10.py  _e2e_doc_memory.py  _e2e_full.py  _e2e_memory_chat.py  _leakage_suite.py  _realdocs_qa.py  ab_translate.py  bench_mem0.py  bench_memory.py  chat_vision_probe.py  eval_comet.py  eval_retrieval.py  load_test.py  make_scan_pdf.py  make_test_pdf.py  reindex_all.py  reindex_visual.py  retr_fig_probe.py  seed_glossary.py  visual_rerank_server.py  visual_retrieve_probe.py  vl_figsweep_probe.py
tests/: test_agent.py  test_chunking.py  test_extract.py  test_memory.py  test_ooxml.py  test_segments.py  test_validate.py
web/: Logo.tsx  __root.tsx  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+120 files in other folders)
