[project]
name = "rag_app"
version = "0.1.0"
description = "Корпоративный инструмент перевода и анализа документации EN→RU (on-prem, RAG)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "arq>=0.26",
    "minio>=7.2",
    "openai>=1.60",
    "httpx>=0.28",
    "python-docx>=1.1",
    "pypdfium2>=4.30",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "pillow>=12.2.0",
    "pgvector>=0.4.2",
]

# Тяжёлый GPU-контур парсинга — только на сервере: uv sync --extra parse.
# Воркер вызывает mineru как CLI (subprocess), импортов нет.
[project.optional-dependencies]
parse = [
    "mineru[core]>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "mypy>=1.14",
    "reportlab>=4.2",
    "alembic>=1.18.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_app"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
